objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Deal Registration Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner Recruitment</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opt_in_for_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt in for SMS Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Rating,
&quot;Hot&quot;, &quot;015Ka0000029yiF&amp;oid=&quot;&amp;$Organization.Id,
&quot;Warm&quot;, &quot;015Ka0000029yiG&amp;oid=&quot;&amp;$Organization.Id,
&quot;Cool&quot;, &quot;015Ka0000029yiH&amp;oid=&quot;&amp;$Organization.Id,
&quot;015Ka0000029yiH&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Budget_Amount__c</fullName>
        <label>Project Budget Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <description>Used by the Einstein Vision Demo updated Jan 2020.  Set the Shadow_Roof_Type__c field to the value you want to be predicted in this field.</description>
        <inlineHelpText>This field will change automatically when you click the “Analyze Roof Type” button.</inlineHelpText>
        <label>Roof Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Pitched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Experience_Approval_Status__c</fullName>
        <description>Used to track approval status for leads in sales process and partner registration processes</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_PRM_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_PRM_Service_Delivery__c</fullName>
        <description>Used in deal registration process to denote which type of service delivery it is</description>
        <label>Service Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>IT Solutions</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Sales_Decision_Timeframe__c</fullName>
        <description>What: What is the timeframe for the decision.</description>
        <label>Decision Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>1-3 Months</fullName>
                </value>
                <value>
                    <fullName>3-6 Months</fullName>
                </value>
                <value>
                    <fullName>6-12 Months</fullName>
                </value>
                <value>
                    <fullName>Next Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Sales_Has_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Checkbox for if they have a budget. Used in page layout.</description>
        <label>Has Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Know_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What; Decision Maker Field</description>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Lead_Quality__c</fullName>
        <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (SDO_Sales_Lead_Total__c &gt; 0, &apos;015Ka0000029yi9&apos;, &apos;015Ka0000029yiA&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (SDO_Sales_Lead_Total__c &gt; 5, &apos;015Ka0000029yi9&apos;, &apos;015Ka0000029yiA&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (SDO_Sales_Lead_Total__c &gt; 10, &apos;015Ka0000029yi9&apos;, &apos;015Ka0000029yiA&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (SDO_Sales_Lead_Total__c &gt; 15, &apos;015Ka0000029yi9&apos;, &apos;015Ka0000029yiA&apos;),&apos;&apos;,24,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Lead_Total__c</fullName>
        <description>What: Formula to calculate total score from score fields.</description>
        <formula>Score1__c + Score2__c  +Score3__c + Score4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Product_Interest__c</fullName>
        <description>What: What products are they interested in.</description>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Sales_Project_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Project Defined Field used in page layouts.</description>
        <label>Project Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Message__c</fullName>
        <description>The content of the SMS message to send out via a quick action and process builder</description>
        <label>SMS Message</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Score1__c</fullName>
        <formula>IF ( SDO_Sales_Know_Decision_Maker__c ,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score2__c</fullName>
        <formula>CASE(SDO_Sales_Decision_Timeframe__c  ,&quot;Immediately&quot;, 5, &quot;1-3 Months&quot;,4,&quot;3-6 Months&quot;, 3, &quot;6-12 Months&quot;, 2, &quot;Next Year&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Timeframe Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score3__c</fullName>
        <formula>IF( SDO_Sales_Project_Defined__c = True, 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Defined Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shadow_Roof_Type__c</fullName>
        <description>Used by the Einstein Vision Demo updated Jan 2020.</description>
        <inlineHelpText>Determines which image shows when you click the &quot;Analyze Roof Type&quot; button.  These are called &quot;RooftopFlat&quot; and &quot;RooftopPitched&quot; inside the static resource &quot;EinsteinVisionRooftopImages&quot;.</inlineHelpText>
        <label>Shadow Roof Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Pitched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IMAGE(
  CASE(
    LeadSource,
    &quot;Website&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/website.png&quot;,
    &quot;Social Media&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/social.png&quot;,
    &quot;Marketing Event&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/marketing.png&quot;,
    &quot;Referral&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/referral.png&quot;,
    &quot;Cold Call&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/coldcall.png&quot;,
    &quot;Community&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/community.png&quot;,
    &quot;Inbound Call&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/inboundcall.png&quot;,
    &quot;Partner&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/partner.png&quot;,
    &quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/website.png&quot;
  ),
  &quot;&quot;, 22, 22
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <description>This field is to ensure that icons show up properly in Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;),
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)),
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Lead_Partner_Application</fullName>
        <active>true</active>
        <businessProcess>Partner Recruitment</businessProcess>
        <description>Used when a potential partner applies to the partner program.</description>
        <label>Lead - Partner Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Lead_DealRegistration</fullName>
        <active>true</active>
        <businessProcess>Deal Registration Lead</businessProcess>
        <description>Used by partners to register leads in the Partner Community.</description>
        <label>Lead - Deal Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Lead_Default</fullName>
        <active>true</active>
        <businessProcess>Sales Lead</businessProcess>
        <description>Standard lead qualification and conversion process.</description>
        <label>Lead</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>